...

  AppLocalizationsStrings.rooms: 'ห้องพัก',
  AppLocalizationsStrings.roomTypes: 'ประเภทห้องพัก',
  AppLocalizationsStrings.chooseThisRoom: 'จอง',
  AppLocalizationsStrings.galleryButtonText: "ดูรูปที่พัก",
  AppLocalizationsStrings.seeAllReviews: "ดูรีวิวทั้งหมด",
  AppLocalizationsStrings.checkIn: "เช็คอิน",
  AppLocalizationsStrings.checkOut: "เช็คเอาต์",
  AppLocalizationsStrings.guest: "ผู้เข้าพัก",
  AppLocalizationsStrings.night: 'คืน',
  AppLocalizationsStrings.totalPrice: 'ราคารวม',
  AppLocalizationsStrings.bahtSymbol: '฿',
  AppLocalizationsStrings.review: 'รีวิว',
  AppLocalizationsStrings.accommodations: 'ที่พักแนะนำ',
  AppLocalizationsStrings.facilities: 'สิ่งอำนวยความสะดวกทั้งหมด',
...
  AppLocalizationsStrings.loading: "กำลังโหลดข้อมูล",
  AppLocalizationsStrings.accommodationHeader: "ข้อมูลที่พัก",
  AppLocalizationsStrings.noMatchingResultMessage:
      "ไม่พบห้องว่างในวันที่คุณต้องการ กรุณาเลือกวันอื่น",
  AppLocalizationsStrings.breakfast: "รวมอาหารเช้า",
  AppLocalizationsStrings.wifi: "Wi-Fi",
  AppLocalizationsStrings.agree: "ตกลง",

  AppLocalizationsStrings.insuranceAlertHeader:
      "คุณได้ออกจาก Robinhood Application",
  AppLocalizationsStrings.insuranceAlertMessage:
      "และได้เข้าสู่เว็บไซต์ของแอกซ่าประกันภัยแล้ว สอบถามเพิ่มเติม กรุณาติดต่อแอกซ่าประกันภัย โทร. 1159",
  AppLocalizationsStrings.insuranceAlertCancel: "ยกเลิก",
...
  AppLocalizationsStrings.everyRoom: 'ทุกห้อง',
  AppLocalizationsStrings.reduceOther: 'ลดเพิ่ม',
  AppLocalizationsStrings.baht: 'บาท',
  AppLocalizationsStrings.laundry: 'บริการซักอบรีด',
  AppLocalizationsStrings.restaurant: 'ห้องอาหาร',
  AppLocalizationsStrings.noPhotos: 'ไม่มีรูปที่พักในขณะนี้',
  AppLocalizationsStrings.periodOfStay: 'วันที่เข้าพัก',
  AppLocalizationsStrings.pickADay: 'เลือกวัน',
  AppLocalizationsStrings.selectDateLabel: 'เลือกวัน',

  AppLocalizationsStrings.mondayShort: 'จ.',
  AppLocalizationsStrings.tuesdayShort: 'อ.',
  AppLocalizationsStrings.wednesdayShort: 'พ.',
...
  AppLocalizationsStrings.octoberShort: 'ต.ค.',
  AppLocalizationsStrings.novemberShort: 'พ.ย.',
  AppLocalizationsStrings.decemberShort: 'ธ.ค.',

  AppLocalizationsStrings.reservationDetails: 'รายละเอียดการจอง',
  AppLocalizationsStrings.reservationDates: 'วันที่เข้าพัก',
  AppLocalizationsStrings.noOfRooms: 'จำนวนห้องพัก',
  AppLocalizationsStrings.room: 'ห้องพัก',
  AppLocalizationsStrings.adults: 'ผู้ใหญ่',
  AppLocalizationsStrings.children: 'เด็ก',
  AppLocalizationsStrings.child: 'เด็กคนที่',
  AppLocalizationsStrings.yearsOld: 'ปี',
  AppLocalizationsStrings.ageOfChild: 'อายุเด็กคนที่',
  AppLocalizationsStrings.enterChildAge: 'ใส่อายุ (เฉพาะตัวเลขเท่านั้น)',
  AppLocalizationsStrings.bedType: 'ประเภทเตียง',
  AppLocalizationsStrings.bedTypeSubTitle: '*ขึ้นอยู่กับความพร้อมของที่พัก',
  AppLocalizationsStrings.selectBedType: 'เลือกประเภทเตียง',
  AppLocalizationsStrings.singleBedType: 'เตียงเดี่ยว',
  AppLocalizationsStrings.doubleBedType: 'เตียงคู่',
  AppLocalizationsStrings.confirm: 'ยืนยัน',
  AppLocalizationsStrings.unableToProceed: 'ไม่สามารถดำเนินการต่อได้',
  AppLocalizationsStrings.boookingMaxGuestLimitExceededMessage:
      'จำนวนผู้เข้าพักเกินกว่าที่กำหนด คุณสามารถจองได้สูงสุด 9 คนต่อการจองหนึ่งครั้ง',
  AppLocalizationsStrings.accomodation: 'ที่พัก',
  AppLocalizationsStrings.roomDetail: 'รายละเอียดห้องพัก',
  AppLocalizationsStrings.bookAccomodation: 'จองที่พัก',
  AppLocalizationsStrings.roomFacility: 'สิ่งอำนวยความสะดวกในห้องพัก',
  AppLocalizationsStrings.bookNow: 'จองเลย',
  AppLocalizationsStrings.totalAmount: 'รวม',
...
  AppLocalizationsStrings.reservePersonLastNameRequired:
      'นามสกุล (จำเป็นต้องระบุ)',

  AppLocalizationsStrings.numberOfNights: "จำนวนคืน",
  AppLocalizationsStrings.numberOfGuests: "จำนวนผู้เข้าพัก",
  AppLocalizationsStrings.numberOfRooms: "จำนวนห้อง",
  AppLocalizationsStrings.roomLabel: 'ห้อง',

  AppLocalizationsStrings.noOfServices: 'จำนวน',
  AppLocalizationsStrings.dateOfService: 'วันที่รับบริการ',
  AppLocalizationsStrings.additionalServices: 'บริการเพิ่มเติม',
  AppLocalizationsStrings.addItems: 'เพิ่มรายการ',
  AppLocalizationsStrings.edit: 'แก้ไข',
...
