...
              widget.pickerTitle,
              style: AppTheme.kHeading1,
              textAlign: TextAlign.center,
            ),
          ),
          OtaIconButton(
            key: const Key('childAgePopUp'),
            icon: const Icon(
              Icons.close_rounded,
              color: AppColors.kGrey70,
              size: kSize20,
            ),
            onTap: () {
...
